--- a/TransparentApiClient.Google.BigQuery.V2/TransparentApiClient.Google.BigQuery.V2.csproj
+++ b/TransparentApiClient.Google.BigQuery.V2/TransparentApiClient.Google.BigQuery.V2.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1-beta1</Version>
+    <Authors>Damiao Castro</Authors>
+    <Company>fowet.com</Company>
+    <PackageProjectUrl>https://github.com/DamiaoCastro/TransparentApiClient.Google</PackageProjectUrl>
+    <AssemblyVersion>0.0.1</AssemblyVersion>
+    <FileVersion>0.0.1</FileVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>Simple RESTfull API clients for Google BigQuery product. For developers that want to avoid the weird implementation of Google's SDK for .net.</Description>
   </PropertyGroup>
 
   <ItemGroup>
