some automatic code generation

--- a/TransparentApiClient.Google.BigQuery.V2/TransparentApiClient.Google.BigQuery.V2.csproj
+++ b/TransparentApiClient.Google.BigQuery.V2/TransparentApiClient.Google.BigQuery.V2.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Folder Include="Datasets\" />
     <Folder Include="Jobs\" />
+    <Folder Include="Schema\" />
     <Folder Include="Tables\" />
     <Folder Include="Projects\" />
   </ItemGroup>
