--- a/TransparentApiClient.Google.BigQuery.V2.TestApplication/TransparentApiClient.Google.BigQuery.V2.TestApplication.csproj
+++ b/TransparentApiClient.Google.BigQuery.V2.TestApplication/TransparentApiClient.Google.BigQuery.V2.TestApplication.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TransparentApiClient.Google.BigQuery.V2\TransparentApiClient.Google.BigQuery.V2.csproj" />
+    <ProjectReference Include="..\TransparentApiClient.Google.Gmail.V1\TransparentApiClient.Google.Gmail.V1.csproj" />
   </ItemGroup>
 
   <ItemGroup>
