cope with gmail and pubsub inner resources

--- a/TransparentApiClient.Google.PubSub.V1/TransparentApiClient.Google.PubSub.V1.csproj
+++ b/TransparentApiClient.Google.PubSub.V1/TransparentApiClient.Google.PubSub.V1.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\TransparentApiClient.Google.Core\TransparentApiClient.Google.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
