--- a/TransparentApiClient.Google.SchemasFileGenerator/TransparentApiClient.Google.SchemasFileGenerator.csproj
+++ b/TransparentApiClient.Google.SchemasFileGenerator/TransparentApiClient.Google.SchemasFileGenerator.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="pubsub-api.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
