--- a/TransparentApiClient.Google.PubSub.V1/TransparentApiClient.Google.PubSub.V1.csproj
+++ b/TransparentApiClient.Google.PubSub.V1/TransparentApiClient.Google.PubSub.V1.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.2</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Damiao Castro</Authors>
+    <Company>fowet.com</Company>
+    <Description>Simple RESTfull API clients for Google PubSub product. For developers that want to avoid the weird implementation of Google's SDK for .net.</Description>
+    <PackageProjectUrl>https://github.com/DamiaoCastro/TransparentApiClient.Google</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
