--- a/TransparentApiClient.Google.Core/TransparentApiClient.Google.Core.csproj
+++ b/TransparentApiClient.Google.Core/TransparentApiClient.Google.Core.csproj
@@ -7,12 +7,14 @@
     <Company>fowet.com</Company>
     <PackageProjectUrl>https://github.com/DamiaoCastro/TransparentApiClient.Google</PackageProjectUrl>
     <Description>core functionality for TransparentApiClient for Google products</Description>
-    <Version>1.0.5</Version>
+    <Version>1.0.6</Version>
+    <AssemblyVersion>1.0.6</AssemblyVersion>
+    <FileVersion>1.0.6</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Apis.Auth" Version="1.32.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.33.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
 </Project>
