--- a/TransparentApiClient.Google.BigQuery.V2/TransparentApiClient.Google.BigQuery.V2.csproj
+++ b/TransparentApiClient.Google.BigQuery.V2/TransparentApiClient.Google.BigQuery.V2.csproj
@@ -2,19 +2,27 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.6</Version>
+    <Version>0.0.7</Version>
     <Authors>Damiao Castro</Authors>
     <Company>fowet.com</Company>
     <PackageProjectUrl>https://github.com/DamiaoCastro/TransparentApiClient.Google</PackageProjectUrl>
-    <AssemblyVersion>0.0.6</AssemblyVersion>
-    <FileVersion>0.0.6</FileVersion>
+    <AssemblyVersion>0.0.7</AssemblyVersion>
+    <FileVersion>0.0.7</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Simple RESTfull API clients for Google BigQuery product. For developers that want to avoid the weird implementation of Google's SDK for .net.</Description>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Resources\" />
     <Folder Include="Schema\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TransparentApiClient.Google.Core\TransparentApiClient.Google.Core.csproj" />
   </ItemGroup>
 
 </Project>
