--- a/TransparentApiClient.Google.Core/TransparentApiClient.Google.Core.csproj
+++ b/TransparentApiClient.Google.Core/TransparentApiClient.Google.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Apis.Auth" Version="1.38.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.41.1" />
   </ItemGroup>
 
 </Project>
